added cerificates and edited prperties

--- a/cert/project.properties
+++ b/cert/project.properties
@@ -4,7 +4,7 @@ vendor.website=http://proplco.com
 vendor.email=bot@proplco.com
 
 project.name=Propl Print
-project.filename=propl_print
+project.filename=qz-tray
 
 launch.opts=-Xms512m
 
